[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
clap = { version = "4.4.12", features = ["derive", "cargo"] }
serde = {version = "1.0.194", features = ["derive"]}
serde_json = "1.0.111"
